<package>
  <name>herkulex_msgs</name>
  <version>0.4.0</version>
  <description>
    Common messages used throughout herkulex_motor stack.
  </description>
  <maintainer email="arebgun@gmail.com">Antons Rebguns</maintainer>

  <license>BSD</license>

  <author>Antons Rebguns</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
